package br.edu.ifpb.cstsi.pss.scireview.model;

import br.edu.ifpb.cstsi.pss.scireview.exception.DadosInvalidosException;
import br.edu.ifpb.cstsi.pss.scireview.model.categoria.CategoriaArtigo;

import java.time.LocalDate;
import java.util.Objects;
import java.util.Optional;

public class Evento {

    private final String nome;
    private final String cidade;
    private final String periodo;
    private final LocalDate inicioSubmissao;
    private final LocalDate fimSubmissao;
    private CategoriaArtigo categoria;

    public Evento(
            String nome,
            String cidade,
            String periodo,
            LocalDate inicioSubmissao,
            LocalDate fimSubmissao
    ) {
        this.nome = validarTextoObrigatorio(nome, "Nome do evento é obrigatório.");
        this.cidade = validarTextoObrigatorio(cidade, "Cidade do evento é obrigatória.");
        this.periodo = validarTextoObrigatorio(periodo, "Período do evento é obrigatório.");
        this.inicioSubmissao = Objects.requireNonNull(inicioSubmissao, "Início da submissão é obrigatório.");
        this.fimSubmissao = Objects.requireNonNull(fimSubmissao, "Fim da submissão é obrigatório.");
        validarJanelaSubmissao(this.inicioSubmissao, this.fimSubmissao);
    }

    public void definirCategoria(CategoriaArtigo categoria) {
        if (categoria == null) {
            throw new DadosInvalidosException("Categoria do evento é obrigatória.");
        }
        if (this.categoria != null) {
            throw new DadosInvalidosException("A categoria do evento já foi definida.");
        }
        this.categoria = categoria;
    }

    public Optional<CategoriaArtigo> getCategoria() {
        return Optional.ofNullable(categoria);
    }

    public boolean possuiCategoria() {
        return categoria != null;
    }

    public String getNome() {
        return nome;
    }

    public String getCidade() {
        return cidade;
    }

    public String getPeriodo() {
        return periodo;
    }

    public LocalDate getInicioSubmissao() {
        return inicioSubmissao;
    }

    public LocalDate getFimSubmissao() {
        return fimSubmissao;
    }

    public boolean estaDentroDoPrazo(LocalDate dataReferencia) {
        Objects.requireNonNull(dataReferencia, "Data de referência é obrigatória.");
        return !dataReferencia.isBefore(inicioSubmissao) && !dataReferencia.isAfter(fimSubmissao);
    }

    @Override
    public boolean equals(Object objeto) {
        if (this == objeto) {
            return true;
        }
        if (objeto == null || getClass() != objeto.getClass()) {
            return false;
        }
        Evento evento = (Evento) objeto;
        return Objects.equals(nome, evento.nome)
                && Objects.equals(cidade, evento.cidade)
                && Objects.equals(periodo, evento.periodo)
                && Objects.equals(inicioSubmissao, evento.inicioSubmissao)
                && Objects.equals(fimSubmissao, evento.fimSubmissao);
    }

    @Override
    public int hashCode() {
        return Objects.hash(nome, cidade, periodo, inicioSubmissao, fimSubmissao);
    }

    @Override
    public String toString() {
        return periodo + " - " + nome + " (" + cidade + ")";
    }

    private static String validarTextoObrigatorio(String valor, String mensagem) {
        if (valor == null || valor.isBlank()) {
            throw new DadosInvalidosException(mensagem);
        }
        return valor.trim();
    }

    private static void validarJanelaSubmissao(LocalDate inicio, LocalDate fim) {
        if (fim.isBefore(inicio)) {
            throw new DadosInvalidosException("Fim da submissão não pode ser anterior ao início.");
        }
    }
}